--- a/website/templates/website/sustainability_detail.html
+++ b/website/templates/website/sustainability_detail.html
@@ -10,9 +10,13 @@
     .pt-130 {
         padding-top: 130px;
     }
+    .blog-detail p {
+        margin-bottom: 1.5em; /* Adjust this value as needed for spacing */
+        line-height: 1.6;
+    }
 </style>
     <!-- Page banner area start here -->
-    <section class="page-banner bg-image pt-130 pb-130" style="background-image: url({{ item.thumbnail_img.url }});">
+    <section class="page-banner bg-image pt-130 pb-130" style="background-image: url({{ sustainability.thumbnail_img.url }});">
         <div class="container">
             <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"></h2>
             <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
@@ -26,11 +30,12 @@
     <!-- Specific Sustainability section start here -->
     <section class="blog-detail pt-130 pb-130">
         <div class="container">
-            <h2>{{ item.title }}</h2>
-            <p>{{ item.content }}</p>
+            <h2>{{ sustainability.title }}</h2>
+            <p>{{ sustainability.content|safe }}</p>
+            <a href="{% url 'sustainability' %}" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
         </div>
     </section>
+    <!-- Specific Sustainability section end here -->
 </main>
-    <!-- Specific Sustainability section start here -->
 {% endblock %}
 
