Fix: Go-back button url error

--- a/website/templates/website/blog_detail.html
+++ b/website/templates/website/blog_detail.html
@@ -32,7 +32,7 @@
         <div class="container">
             <h2>{{ blog.title }}</h2>
             <p>{{ blog.content|safe }}</p>
-            <a href="{% url 'blogs' %}" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
+            <a href="javascript:history.back()" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
         </div>
     </section>
 </main>
