--- a/website/templates/website/initiative_detail.html
+++ b/website/templates/website/initiative_detail.html
@@ -36,7 +36,7 @@
         <div class="container">
             <h2>{{ initiative.title }}</h2>
             <p>{{ initiative.content|safe }}</p>
-            <a href="{% url 'sustainability' %}" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
+            <a href="javascript:history.back()" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
         </div>
     </section>
     <!-- Specific Initiative section end here -->
