--- a/website/templates/website/sustainability_detail.html
+++ b/website/templates/website/sustainability_detail.html
@@ -32,7 +32,7 @@
         <div class="container">
             <h2>{{ sustainability.title }}</h2>
             <p>{{ sustainability.content|safe }}</p>
-            <a href="{% url 'sustainability' %}" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
+            <a href="javascript:history.back()" class="btn-two"><span>go back</span> <i class="fa-solid fa-angles-left"></i></a>
         </div>
     </section>
     <!-- Specific Sustainability section end here -->
